--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "gatsby-plugin-google-gtag": "^5.13.0",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-svgr": "^3.0.0-beta.0",
+    "gatsby-remark-katex": "^7.13.0",
+    "katex": "^0.16.9",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
