DOCS: 깃허브 닉네임 수정

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "gatsby blog made by seokhun",
   "version": "1.2.0",
-  "author": "tommya98 <tommya98@naver.com>",
+  "author": "SeokhunEom <tommya98@naver.com>",
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
